k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: jobtracker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: ambarkovateona/job-tracker-backend:latest
          ports:
            - containerPort: 4445
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 4445
            initialDelaySeconds: 45
            periodSeconds: 10
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 4445
            initialDelaySeconds: 60
            periodSeconds: 15
            failureThreshold: 5
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: jobtracker
spec:
  selector:
    app: backend
  ports:
    - port: 4445
      targetPort: 4445
